适配 Android O privapp-permissions, 适配早期 su.