@@ -1,12 +1,9 @@
 package com.xdandroid.kill;
 
-import android.annotation.*;
 import android.app.*;
 import android.os.*;
 
 import java.io.*;
-import java.nio.charset.*;
-import java.nio.file.*;
 
 /**
  * android:theme="@android:style/Theme.NoDisplay"
@@ -18,27 +15,20 @@ public class SystemActivity extends Activity implements Utils {
         super.onCreate(savedInstanceState);
         Utils.setPermissive();
         try {
-            Runtime.getRuntime().exec("su -c mount -o rw,remount,rw /system").waitFor();
+            Runtime.getRuntime().exec(new String[]{"su", "-c", "mount -o rw,remount,rw /system"}).waitFor();
             if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.O) {
-                Runtime.getRuntime().exec("su -c rm -f /sdcard/build.prop").waitFor();
-                Runtime.getRuntime().exec("su -c cp /system/build.prop /sdcard/build.prop").waitFor();
-                @SuppressLint("SdCardPath") Path path = Paths.get("/sdcard/build.prop");
-                Files.write(path, new String(Files.readAllBytes(path), StandardCharsets.UTF_8)
-                        .replaceAll("control_privapp_permissions=enforce", "control_privapp_permissions=log")
-                        .getBytes(StandardCharsets.UTF_8));
-                Runtime.getRuntime().exec("su -c rm -f /system/build.bak").waitFor();
-                Runtime.getRuntime().exec("su -c cp /system/build.prop /system/build.bak").waitFor();
-                Runtime.getRuntime().exec("su -c chmod 0600 /system/build.bak").waitFor();
-                Runtime.getRuntime().exec("su -c rm -f /system/build.prop").waitFor();
-                Runtime.getRuntime().exec("su -c cp /sdcard/build.prop /system/build.prop").waitFor();
-                Runtime.getRuntime().exec("su -c chmod 0600 /system/build.prop").waitFor();
-                Runtime.getRuntime().exec("su -c rm -f /sdcard/build.prop").waitFor();
+                String fileName = "privapp-permissions-kill.xml";
+                File sdcardFile = new File(Environment.getExternalStorageDirectory(), fileName);
+                FileUtils.copyToFileOrThrow(getAssets().open(fileName), sdcardFile);
+                Runtime.getRuntime().exec(new String[]{"su", "-c", "rm -f /system/etc/permissions/" + fileName}).waitFor();
+                Runtime.getRuntime().exec(new String[]{"su", "-c", "cp " + sdcardFile.getAbsolutePath() + " /system/etc/permissions/" + fileName}).waitFor();
+                Runtime.getRuntime().exec(new String[]{"su", "-c", "chmod 0644 /system/etc/permissions/" + fileName}).waitFor();
             }
             if (!getApplicationInfo().sourceDir.startsWith("/system/priv-app/")) {
-                Runtime.getRuntime().exec("su -c rm -f /system/priv-app/Kill.apk").waitFor();
-                Runtime.getRuntime().exec("su -c cp " + getApplicationInfo().sourceDir + " /system/priv-app/Kill.apk").waitFor();
-                Runtime.getRuntime().exec("su -c chmod 0644 /system/priv-app/Kill.apk").waitFor();
-                Runtime.getRuntime().exec("su -c pm uninstall " + getPackageName()).waitFor();
+                Runtime.getRuntime().exec(new String[]{"su", "-c", "rm -f /system/priv-app/Kill.apk"}).waitFor();
+                Runtime.getRuntime().exec(new String[]{"su", "-c", "cp " + getApplicationInfo().sourceDir + " /system/priv-app/Kill.apk"}).waitFor();
+                Runtime.getRuntime().exec(new String[]{"su", "-c", "chmod 0644 /system/priv-app/Kill.apk"}).waitFor();
+                Runtime.getRuntime().exec(new String[]{"su", "-c", "pm uninstall " + getPackageName()}).waitFor();
             }
         } catch (InterruptedException | IOException e) {
             throw asUnchecked(e);
