@@ -51,7 +51,7 @@ interface Utils {
     int OP_BOOT_COMPLETED = SystemProperties.getInt("ro.lineage.build.version.plat.sdk", 0) < 6 ? 0 : Build.VERSION.SDK_INT >= Build.VERSION_CODES.O ? 72 : 66;
 
     static void setPermissive() {
-        try { Runtime.getRuntime().exec("su -c setenforce 0"); } catch (IOException e) { e.printStackTrace(); }
+        try { Runtime.getRuntime().exec(new String[]{"su", "-c", "setenforce 0"}); } catch (IOException e) { e.printStackTrace(); }
     }
 
     @SuppressWarnings({"TypeParameterHidesVisibleType", "unchecked"})
